name:                pwn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tosainu/pwn#readme
license:             MIT
license-file:        LICENSE
author:              Tosainu
maintainer:          tosainu.maple@gmail.com
copyright:           2017 Tosainu
category:            Utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Pwn
                     , Pwn.Log
                     , Pwn.Packing
                     , Pwn.Tubes
                     , Pwn.Tubes.Process
                     , Pwn.Tubes.Socket
                     , Pwn.Tubes.Tube
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , process
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pwn

source-repository head
  type:     git
  location: https://github.com/Tosainu/pwn
