name:                pwn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tosainu/pwn.hs#readme
license:             MIT
license-file:        LICENSE
author:              Tosainu
maintainer:          tosainu.maple@gmail.com
copyright:           2017 Tosainu
category:            Utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Pwn
                     , Pwn.Asm
                     , Pwn.Config
                     , Pwn.Log
                     , Pwn.Packing
                     , Pwn.Tubes
  other-modules:       Pwn.Tubes.Process
                     , Pwn.Tubes.Socket
                     , Pwn.Tubes.Tube
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , conduit
                     , conduit-extra
                     , exceptions
                     , filepath
                     , mtl
                     , network
                     , process
                     , resourcet
  default-language:    Haskell2010

test-suite             pwn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , hspec
                     , mtl
                     , pwn
  other-modules:       Pwn.AsmSpec
                     , Pwn.PackingSpec
                     , Pwn.Tubes.ProcessSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tosainu/pwn.hs
